5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1636_652.log
== TEST (2019-04-04 23:09:21) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao
if (n // (n % 100) == 0):
	msg = "SIM"
else:
	msg = "NAO"
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:10:14) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao
if (n // (n % 100) == 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:10:43) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao
if ((n // (n % 100)) == 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:13:21) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao
if ((n % (n % 100)) != 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:14:25) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao
if ((n % (n % 100)) != 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:16:02) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao
if (n % (n % 100) != 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:18:18) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao
if ((n % (n % 100)) != 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:19:51) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao
N = (n % 100)
if (n % N != 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:20:34) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao
N = (n % 100)
if (n % N = 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- ERROR:
File "XXXX", line 5
    if (n % N = 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:20:41) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao
N = (n % 100)
if (n % N == 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 23:20:49) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao
N = (n % 100)
if (n % N == 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- EXECUTION TIME:
0.162683
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 23:22:15) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao

if (n % (n % 100) == 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 23:22:21) 
-- CODE:
# Entrada
n = int(input("n: "))
# Condicao

if (n % (n % 100) == 0):
	msg = "SIM"
else:
	msg = "NAO"
print(msg)
-- EXECUTION TIME:
0.141358
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
